<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Find Here</string>
    <string name="button_start">Start</string>
    <string name="splash_screen_description">Vuforia Splash</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="true_user">success</string>
    <string name="login_success">登陆成功</string>

    <!-- Strings related to register -->
    <string name="prompt_username">Username</string>
    <string name="prompt_gender">选择性别</string>
    <string name="add_info">填写注册信息</string>
    <string name="commit">提交</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="register_failed">注册失败</string>
    <string name="title_activity_rigister">RigisterActivity</string>

    <!-- Strings related to add -->
    <string name="prompt_upload">Edit here</string>
    <string name="add_finished">添加成功</string>
    <string name="prompt">提示</string>
    <string name="ok">确认</string>
    <string name="not_empty">不能为空</string>

    <!-- Strings related to ip -->
    <string name="ip">192.168.1.8:8080</string>
    <string name="add_ip">http://115.159.184.211:8080/FindHere/SetComments/text</string>
    <string name="login_ip">http://115.159.184.211:8080/FindHere/Login</string>
    <string name="register_ip">http://115.159.184.211:8080/FindHere/SignUp</string>

    <string name="addfile_url">http://115.159.184.211:8080/FindHere/SetComments/file</string>
    <string name="updateuser_url">http://115.159.184.211:8080/FindHere/UpdateUser</string>
    <string name="my_comment_ip">http://115.159.184.211:8080/FindHere/GetComments/GetIDsByUserID</string>
    <string name="getcomment_ip">http://115.159.184.211:8080/FindHere/GetComments/ByID</string>
    <string name="seek_ip">http://115.159.184.211:8080/FindHere/GetComments/GetIDsByTargetID</string>
    <string name="web_ip">http://115.159.184.211:8080/FindHere/Apply</string>
    <string name="del_ip">http://115.159.184.211:8080/FindHere/DeleteComments/ByID</string>

    <!-- Strings related to targetID -->
    <string name="no_login">未登录</string>
    <string name="no_target">未识别出标识物</string>

    <!-- Strings related to unity -->
    <string name="comment_type">http://115.159.184.211:8080/FindHere/GetComments/GetIDsByTargetID</string>
    <string name="comment_content">http://115.159.184.211:8080/FindHere/GetComments/ByID</string>

    <!-- Strings related to comments -->
    <string name="text">text</string>
    <string name="title_activity_sample">Settings</string>

    <!-- Strings related to delete -->
    <string name="cancel">取消</string>
    <string name="del_success">删除成功</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_edit_user">EditUserActivity</string>
    <string name="title_activity_my_target">myTargetActivity</string>
</resources>