<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.FindHere.activity.LoginActivity"
    android:weightSum="1"
    android:orientation="vertical"
    android:background="@color/soft_blue">

    <!-- Login progress -->
    <ImageButton
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back_w"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
       />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="250dp"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="100dp">


            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/user_w"
                android:layout_gravity="center_horizontal"
                android:id="@+id/imageView"
                />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_input"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_input"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/email_register_button"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/title_activity_register"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/shape_handin"
                    android:textSize="16dp"
                    android:textStyle="italic" />
                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/title_activity_login"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/shape_handin"
                    android:textSize="16dp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
